Feature/update ecs library (#41)
* updated to sola-ecs 2.0.0

* updated to java 18